<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionsActivity">

    <TextView
        android:id="@+id/activity_questions_question"
        android:layout_width="306dp"
        android:layout_height="139dp"
        android:layout_marginBottom="260dp"
        android:gravity="center"
        android:text="@string/question_placeholder"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        android:typeface="normal"
        app:fontFamily="@font/droid_sans_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/activity_questions_answer"
        android:layout_width="306dp"
        android:layout_height="94dp"
        android:gravity="center"
        android:text="@string/answer_placeholder"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_questions_question"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/activity_questions_logo"
        android:layout_width="160dp"
        android:layout_height="93dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/activity_questions_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_questions_answer"
        app:layout_constraintVertical_bias="0.227" />

    <Button
        android:id="@+id/activity_questions_hard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toEndOf="@+id/activity_questions_normal"
        app:layout_constraintTop_toBottomOf="@+id/activity_questions_answer"
        app:layout_constraintVertical_bias="0.227" />

    <Button
        android:id="@+id/activity_questions_easy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/easy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/activity_questions_normal"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_questions_answer"
        app:layout_constraintVertical_bias="0.227" />

    <Button
        android:id="@+id/activity_questions_random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/random"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_questions_normal"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>